# job-scrapper-worker

./: Cargo.toml
examples/: indeed.html
src/: indeed.rs  jobs.rs  lib.rs  main.rs  providers.rs
